<resources>
    <string name="app_name">please</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Overview Fragment</string>
    <string name="random_button_text">Random</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">1</string>
    <string name="toast_button_text">Toast</string>
    <string name="count_button_text">Count</string>
    <string name="wassssuup">wassssuup</string>
    <string name="hey_lil_bro">hey lil bro</string>
    <string name="random">random</string>
    <string name="maps">maps</string>
    <string name="random_heading">Random Number between 0 and %d</string>
    <string name="frame_layout">frame_layout</string>
    <string name="test">Test</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Explain_Ticket">Introducing the Kneipenhupfa Digital Ticket – Your passport to unforgettable moments! 🎟️✨ No more paper, just pure convenience! Access exclusive events, enjoy special offers, and join the fun with a simple scan. Download now and let the good times roll! #KneipenhupfaTicket 🍻🎉</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to_home">Back To Home</string>
    <string name="aurum_deggendorf">Aurum Deggendorf</string>
    <string name="lord_lobo_nelson">Lord \"Lobo\" Nelson</string>
    <string name="cafe_bar_first_floor">Cafe Bar First Floor</string>
    <string name="peppers_cafe_bar">Peppers Café-Bar</string>
    <string name="galerie_deggendorf">Galerie Deggendorf</string>
    <string name="bkingz_lounge_deggendorf">BKing\'z Lounge Deggendorf</string>
    <string name="flair_deggendorf">FLAIR Deggendorf</string>
    <string name="c2_coffee_cocktails_deggendorf"><![CDATA[C² Coffee & Cocktails Deggendorf]]></string>
    <string name="more_info">More Info</string>
    <string name="sams_bar">Sams Bar</string>
    <string name="home_bar">Home Bar</string>
    <string name="cafe_extra_deggendorf_gmbh">Cafe Extra Deggendorf GmbH</string>
    <string name="randomText">Post no so what deal evil rent by real in. But her ready least set lived spite solid. September how men saw tolerably two behaviour arranging. She offices for highest and replied one venture pasture. Applauded no discovery in newspaper allowance am northward. Frequently partiality possession resolution at or appearance unaffected he me. Engaged its was evident pleased husband. Ye goodness felicity do disposal dwelling no. First am plate jokes to began of cause an scale. Subjects he prospect elegance followed no overcame possible it on.</string>
</resources>